Auto stash before merge of "main" and "origin/main"

--- a/Calendario_e-sports/src/Vista/DatosEquipos.form
+++ b/Calendario_e-sports/src/Vista/DatosEquipos.form
@@ -48,7 +48,9 @@
                   <Component id="tfIDCal" alignment="0" max="32767" attributes="0"/>
                   <Component id="tfDueñoEquipo" alignment="0" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace pref="274" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="85" max="-2" attributes="0"/>
+              <Component id="jButton1" min="-2" pref="83" max="-2" attributes="0"/>
+              <EmptySpace pref="106" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -99,6 +101,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
                   <Component id="jScrollPane1" min="-2" pref="184" max="-2" attributes="0"/>
+                  <Component id="jButton1" min="-2" pref="44" max="-2" attributes="0"/>
               </Group>
           </Group>
       </Group>
@@ -183,6 +186,11 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="tfIDEActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="jButton1">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Atras"/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
