--- a/Calendario_e-sports/src/Vista/Equipos.form
+++ b/Calendario_e-sports/src/Vista/Equipos.form
@@ -58,7 +58,7 @@
                   <Component id="fnatic" min="-2" pref="171" max="-2" attributes="0"/>
                   <Component id="V1" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace pref="146" max="32767" attributes="0"/>
+              <EmptySpace pref="92" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -66,6 +66,9 @@
   <SubComponents>
     <Component class="javax.swing.JButton" name="G2">
       <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/Fotos/G2.png"/>
+        </Property>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="null"/>
         </Property>
