--- a/Calendario_e-sports/src/Vista/PP.form
+++ b/Calendario_e-sports/src/Vista/PP.form
@@ -106,7 +106,7 @@
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\1GDAW01\Downloads\pp.jpg"/>
+              <Image iconType="2" name="C:\Users\1GDAW01\Desktop\Proyecto-E-Sports-Grupo1\Imagenes\pp.jpg"/>
             </Property>
           </Properties>
           <Constraints>
